--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+
+server.port = 8081
+server.servlet.context-path=/app
+value.name = itzel
+value.apellido = alonso
+value.random = ${random.value}
+
