--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,18 @@ value.name = itzel
 value.apellido = alonso
 value.random = ${random.value}
 
+user.email = itzel@hotmail.com
+user.password=1234
+user.age=24
+
+logging.level.root = debug
+logging.leve.org.springframework.web = indo
+logging.level.org.hibernate = error
+
+spring.jpa.show-sql=true
+#spring.datasource.url = jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.h2Dialect
+
