--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ user.email = itzel@hotmail.com
 user.password=1234
 user.age=24
 
-logging.level.root = debug
-logging.leve.org.springframework.web = indo
+#logging.level.root = debug
+logging.leve.org.springframework.web = info
 logging.level.org.hibernate = error
 
 spring.jpa.show-sql=true
